# dependency_checker

./: Cargo.toml  README.md  example_dependency_graph.dot  example_report.csv
src/: main.rs
