[package]
name = "dependency_checker"
authors = ["Eric David Smith <erictherobot@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
reqwest = { version = "0.11.4", features = ["json"] }
csv = "1.1.6"
tokio = { version = "1", features = ["full"] }
semver = "1.0.3"
